# faraday

./: .dockerignore  .gitlab-ci.yml  .pylintrc  Dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_extras.txt
.gitlab/ci/build-ci/: .build-gitlab-ci.yml  .testing-gitlab-ci.yml  .uv-prebuild-gitlab-ci.yml
.gitlab/ci/publish/: .mirror-to-github-gitlab-ci.yml
.gitlab/ci/testing/: .pretesting-gitlab-ci.yml  .uv-testing-gitlab-ci.yml
.gitlab/ci/upload/: .storage-gitlab-ci.yml
CHANGELOG/current/: 8201.json
faraday/: requirements.txt
faraday/migrations/versions/: 6bbf0b0120cf_vulnerability_grouping_feature_fields.py  a1b2c3d4e5f6_add_count_to_vulnerability_group.py  a9b75b0ddc01_add_risk_index.py  cd3c87347f80_add_configs_for_vulnerability_grouping.py
faraday/server/: app.py  debouncer.py  models.py  tasks.py
faraday/server/api/: base.py
faraday/server/api/modules/: services_base.py  vulns_base.py
scripts/: create-wrapper-scripts.sh  merge-conflict-detector.py
tests/: test_api_bulk_create.py  test_api_docs.py  test_debouncer.py  test_server.py
